<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IntroActivity"
    android:background="?attr/colorLayouts">

    <LinearLayout
        android:id="@+id/intro_topstuff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_above="@id/intro_bottomstuff">

        <ImageView

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="25dp"/>
        <TextView
            android:text="@string/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <Button
        android:background="@drawable/button_sortok_background"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/textPrimary"
        android:id="@+id/intro_bottomstuff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>